Octane fails with "memory leak: allocating handle outside HandleMark"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b96

      Running Octane crashes the VM with:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/6675699/hotspot/src/share/vm/runtime/handles.cpp:35), pid=2182, tid=2187
      # assert(_handle_mark_nesting > 1) failed: memory leak: allocating handle outside HandleMark
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-tohartma_2015_11_23_16_07-b00)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-tohartma_2015_11_23_16_07-b00, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to /home/tohartma/programs/octane/core.2182)

      Stack: [0x00007fbc84934000,0x00007fbc84a35000], sp=0x00007fbc84a335d0, free space=1021k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1280bd2] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x182
      V [libjvm.so+0x128191a] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x4a
      V [libjvm.so+0x8b7c34] report_vm_error(char const*, int, char const*, char const*, ...)+0xd4
      V [libjvm.so+0xaccd31] HandleArea::allocate_handle(oop)+0x301
      V [libjvm.so+0x725bd7] Handle::Handle(oop)+0x57
      V [libjvm.so+0xb82629] java_lang_invoke_MethodHandleNatives_CallSiteContext::vmdependencies(oop)+0xb9
      V [libjvm.so+0xf31870] MethodHandles::remove_dependent_nmethod(oop, nmethod*)+0x70
      V [libjvm.so+0xf6a816] nmethod::flush_dependencies(BoolObjectClosure*)+0x226
      V [libjvm.so+0xf73cda] nmethod::make_unloaded(BoolObjectClosure*, oop)+0x4a
      V [libjvm.so+0xf7404b] nmethod::can_unload(BoolObjectClosure*, oop*, bool)+0xbb
      V [libjvm.so+0xf74d6e] nmethod::do_unloading_parallel(BoolObjectClosure*, bool)+0x28e
      V [libjvm.so+0x9e373b] G1ParallelCleaningTask::work(unsigned int)+0x26b
      V [libjvm.so+0x12da96b] GangWorker::loop()+0xab
      V [libjvm.so+0xfb5f0a] java_start(Thread*)+0xca

      Most likely this is caused by JDK-8139595 which changed vmdependencies().

            Assignee:
            Vladimir Ivanov
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: