8144024: Octane fails with "memory leak: allocating handle outside HandleMark"

Reviewed-by: kvn